--- a/internal.ipynb
+++ b/internal.ipynb
@@ -135,9 +135,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m,\u001b[39m4\u001b[39m):\n\u001b[0;32m     13\u001b[0m       \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mMarks in subject\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m = \u001b[39m\u001b[39m'\u001b[39m,\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlist_of_marks[i\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m])\n\u001b[1;32m---> 14\u001b[0m Rachit \u001b[39m=\u001b[39m Student()\n\u001b[0;32m     15\u001b[0m Rachit\u001b[39m.\u001b[39mcompute()\n\u001b[0;32m     16\u001b[0m Rachit\u001b[39m.\u001b[39mdisplay()\n",
+      "Cell \u001b[1;32mIn[16], line 6\u001b[0m, in \u001b[0;36mStudent.__init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mEnter student name: \u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m,\u001b[39m4\u001b[39m):\n\u001b[1;32m----> 6\u001b[0m   \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlist_of_marks\u001b[39m.\u001b[39mappend(\u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39mf\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mEnter marks in subect \u001b[39;49m\u001b[39m{\u001b[39;49;00mi\u001b[39m}\u001b[39;49;00m\u001b[39m :\u001b[39;49m\u001b[39m'\u001b[39;49m)))\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
    "source": [
     "class Student:\n",
     "  list_of_marks = []\n",
@@ -152,9 +165,9 @@
     "    print(self.name,'details:')\n",
     "    for i in range(1,4):\n",
     "      print(f'Marks in subject{i} = ',self.list_of_marks[i-1])\n",
-    "yash = Student()\n",
-    "yash.compute()\n",
-    "yash.display()\n",
+    "Rachit = Student()\n",
+    "Rachit.compute()\n",
+    "Rachit.display()\n",
     "print(Rachit.total_marks)\n",
     "print(Rachit.average)"
    ]
@@ -215,9 +228,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "class Square_Iterator:\n",
     "    def __init__(self,limit):\n",
@@ -249,9 +279,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mike \n",
+      "ID: 5 \n",
+      "salary: 75000 \n",
+      "designation: Manager \n",
+      "team: A\n",
+      "\n",
+      "Mike is leading the following employees:\n",
+      "\n",
+      "John \n",
+      "ID: 1 \n",
+      "salary: 50000\n",
+      "\n",
+      "Jane \n",
+      "ID: 2 \n",
+      "salary: 60000\n",
+      "\n",
+      "Tom \n",
+      "ID: 6 \n",
+      "salary: 70000 \n",
+      "designation: Team Leader \n",
+      "team: B\n",
+      "\n",
+      "Tom is leading the following employees:\n",
+      "\n",
+      "Bob \n",
+      "ID: 3 \n",
+      "salary: 55000\n",
+      "\n",
+      "Alice \n",
+      "ID: 4 \n",
+      "salary: 65000\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -310,6 +379,66 @@
     "\n",
     "mgr.display_team()\n",
     "tl.display_team()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a Program to create a series from a list, numpy array and dict.\n",
+    "list_data = [10, 20, 30, 40, 50]\n",
+    "array_data = ([0.5, 0.8, 1.2, 1.5, 2.0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a class Employee that keeps a track of the number of employees in an\n",
+    "organization and also stores their name, designation and salary details.\n",
+    "a. Write a method called getdata to take input (name, designation, salary)\n",
+    "from user.\n",
+    "b. Write a method called average to find average salary of all the employees\n",
+    "in the organization.\n",
+    "c. Write a method called display to print all the information of an employee. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Employee:\n",
+    "  number_of_employees = 0\n",
+    "  total_salary = 0 \n",
+    "  average = 0\n",
+    "  def __init__(self):\n",
+    "    Employee.number_of_employees+=1\n",
+    "  def getdata(self):\n",
+    "    self.name = input(\"Enter employee name: \")\n",
+    "    self.designation = input(\"Enter employee designation: \")\n",
+    "    self.salary = int(input(\"Enter employee salary: \"))\n",
+    "    \n",
+    "    Employee.total_salary += self.salary\n",
+    "    Employee.average = Employee.total_salary/Employee.number_of_employees\n",
+    "  def display(self):\n",
+    "    print(self.name,'details :')\n",
+    "    print('Designation :',self.designation)\n",
+    "    print('Salary :',self.salary)\n",
+    "E = Employee()\n",
+    "E.getdata()\n",
+    "E.display()\n",
+    "E.number_of_employees"
    ]
   }
  ],
