--- a/internal.ipynb
+++ b/internal.ipynb
@@ -416,7 +416,20 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 19\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mSalary :\u001b[39m\u001b[39m'\u001b[39m,\u001b[39mself\u001b[39m\u001b[39m.\u001b[39msalary)\n\u001b[0;32m     18\u001b[0m E \u001b[39m=\u001b[39m Employee()\n\u001b[1;32m---> 19\u001b[0m E\u001b[39m.\u001b[39;49mgetdata()\n\u001b[0;32m     20\u001b[0m E\u001b[39m.\u001b[39mdisplay()\n\u001b[0;32m     21\u001b[0m E\u001b[39m.\u001b[39mnumber_of_employees\n",
+      "Cell \u001b[1;32mIn[18], line 10\u001b[0m, in \u001b[0;36mEmployee.getdata\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnter employee name: \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      9\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdesignation \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnter employee designation: \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msalary \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mEnter employee salary: \u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[0;32m     12\u001b[0m Employee\u001b[39m.\u001b[39mtotal_salary \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msalary\n\u001b[0;32m     13\u001b[0m Employee\u001b[39m.\u001b[39maverage \u001b[39m=\u001b[39m Employee\u001b[39m.\u001b[39mtotal_salary\u001b[39m/\u001b[39mEmployee\u001b[39m.\u001b[39mnumber_of_employees\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
    "source": [
     "class Employee:\n",
     "  number_of_employees = 0\n",
@@ -440,6 +453,21 @@
     "E.display()\n",
     "E.number_of_employees"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What are ways of creating 1D, 2D and 3D arrays in NumPy? Give Examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
