--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -1,14 +1,40 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "master = Tk()\n",
+    "Label(master,text='First Name').grid(row=0)\n",
+    "Label(master,text='Last Name').grid(row=1)\n",
+    "e1=Entry(master)\n",
+    "e2=Entry(master)\n",
+    "e1.grid(row=0,column=1)\n",
+    "e2.grid(row=1,column=1)\n",
+    "mainloop()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
