--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -16,6 +16,20 @@
     "e2.grid(row=1,column=1)\n",
     "mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "window=tk.Tk('Auto Close Window')\n",
+    "def close_window():\n",
+    "    window.destroy()\n",
+    "window.after(5000,close_window)\n",
+    "window.mainloop()"
+   ]
   }
  ],
  "metadata": {
