--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,24 @@
     "    window.destroy()\n",
     "window.after(5000,close_window)\n",
     "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk \n",
+    "def calculate():\n",
+    "    try:\n",
+    "        expression=entry.get()\n",
+    "        result = eval(expression) \n",
+    "        output_label.config(text='Result'+str(result))\n",
+    "    except Exception as e:\n",
+    "        output_label.config(text='Error:'+str(e))\n",
+    "window=tk.Tk()\n",
+    "window.tite(\"Arithmetic Calculator\")       "
    ]
   }
  ],
