--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,16 @@
     "    except Exception as e:\n",
     "        output_label.config(text='Error:'+str(e))\n",
     "window=tk.Tk()\n",
-    "window.tite(\"Arithmetic Calculator\")       "
+    "window.title(\"Arithmatic Calculator\")\n",
+    "entry = tk.Tk() \n",
+    "window.title(\"Arithmatic Calculator\")\n",
+    "entry=tk.Entry(window,width=30) \n",
+    "entry.pack() \n",
+    "calculate_button=tk.Button(window,text='Calculate',command=calculate)\n",
+    "calculate_button.pack()\n",
+    "output_label=tk.Label(window,text='')    \n",
+    "output_label.pack()\n",
+    "window.mainloop()"
    ]
   }
  ],
