--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -184,7 +184,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -193,40 +192,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import messagebox\n",
-    "top = tk.Tk()\n",
-    "top.title(\"Multiple buttons\")\n",
-    "top.geometry('1000x1000')\n",
-    "def hellocallback():\n",
-    "    messagebox.showinfo(\"Hello Python\",\"Hello World\")       \n",
-    "def draw_rectangle(): \n",
-    "    canvas = tk.Canvas(top,width=250,height=400)\n",
-    "    canvas.pack()\n",
-    "    canvas.create_rectangle(50,100,200,200,fill=\"blue\")    \n",
-    "def calculate():\n",
-    "    try:\n",
-    "        expression = entry.get()\n",
-    "        result = eval(expression)\n",
-    "        output_label.config(text=\"Result: \"+ str(result))\n",
-    "    except Exception as e:\n",
-    "        output_label.config(text=\"Error: \" +str(e))  \n",
-    "B=tk.Button(top,text=\"Hello\",command=hellocallback)\n",
-    "B.pack()\n",
-    "rectangle_button = tk.Button(top,text=\"Draw Rectangle\",command=draw_rectangle)\n",
-    "rectangle_button.pack()\n",
-    "entry = tk.Tk() \n",
-    "entry = tk.Entry(top,width=30)\n",
+    "\n",
+    "def draw_line():\n",
+    "    canvas.create_line(50, 50, 200, 50, width=2, fill='blue')\n",
+    "\n",
+    "def print_message():\n",
+    "    messagebox.showinfo(\"Message\", \"Hello, World!\")\n",
+    "\n",
+    "def draw_pentagon():\n",
+    "    canvas.create_polygon(100, 150, 150, 100, 200, 150, 180, 200, 120, 200, outline='red', fill='yellow')\n",
+    "\n",
+    "def submit_form():\n",
+    "    text = entry.get()\n",
+    "    messagebox.showinfo(\"Form Data\", f\"Submitted Text: {text}\")\n",
+    "\n",
+    "window = tk.Tk()\n",
+    "window.title(\"Button Actions\")\n",
+    "\n",
+    "canvas = tk.Canvas(window, width=300, height=300)\n",
+    "canvas.pack()\n",
+    "\n",
+    "line_button = tk.Button(window, text=\"Draw Line\", command=draw_line)\n",
+    "line_button.pack()\n",
+    "\n",
+    "message_button = tk.Button(window, text=\"Print Message\", command=print_message)\n",
+    "message_button.pack()\n",
+    "\n",
+    "pentagon_button = tk.Button(window, text=\"Draw Pentagon\", command=draw_pentagon)\n",
+    "pentagon_button.pack()\n",
+    "\n",
+    "form_label = tk.Label(window, text=\"Enter Text:\")\n",
+    "form_label.pack()\n",
+    "\n",
+    "entry = tk.Entry(window, width=30)\n",
     "entry.pack()\n",
-    "calculate_button = tk.Button(top,text=\"Calculate\",command=calculate)\n",
-    "calculate_button.pack()\n",
-    "output_label = tk.Label(top,text=\"\")\n",
-    "output_label.pack()\n",
-    "mainloop()"
+    "\n",
+    "submit_button = tk.Button(window, text=\"Submit\", command=submit_form)\n",
+    "submit_button.pack()\n",
+    "\n",
+    "window.mainloop()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "def press(num):\n",
+    "    global expression\n",
+    "    expression = expression + str(num)\n",
+    "    entry.delete(0, tk.END)\n",
+    "    entry.insert(tk.END, expression)\n",
+    "def equalpress():\n",
+    "    try:\n",
+    "        global expression\n",
+    "        result = str(eval(expression))\n",
+    "        entry.delete(0, tk.END)\n",
+    "        entry.insert(tk.END, result)\n",
+    "        expression = \"\"\n",
+    "    except Exception as e:\n",
+    "        entry.delete(0, tk.END)\n",
+    "        entry.insert(tk.END, \"Error: \" + str(e))\n",
+    "        expression = \"\"\n",
+    "def clear():\n",
+    "    global expression\n",
+    "    entry.delete(0, tk.END)\n",
+    "    expression = \"\"\n",
+    "window = tk.Tk()\n",
+    "window.title(\"Large Calculator\")\n",
+    "window.color=\"lightblue\"\n",
+    "expression = \"\"\n",
+    "entry = tk.Entry(window, font=(\"Arial\", 20), width=30,bg=\"green\")\n",
+    "entry.grid(row=0, column=0, columnspan=4, padx=10, pady=10)\n",
+    "buttons = [\n",
+    "    '7', '8', '9', '/',\n",
+    "    '4', '5', '6', '*',\n",
+    "    '1', '2', '3', '-',\n",
+    "    '0', '.', '=', '+'\n",
+    "]\n",
+    "row = 1\n",
+    "col = 0\n",
+    "for button in buttons:\n",
+    "    btn = tk.Button(window, text=button, fg='black', bg='red', font=(\"Arial\", 16), height=2, width=8)\n",
+    "    btn.grid(row=row, column=col, padx=5, pady=5)\n",
+    "    btn.config(command=lambda num=button: press(num))\n",
+    "    col += 1\n",
+    "    if col > 3:\n",
+    "        col = 0\n",
+    "        row += 1\n",
+    "clear_button = tk.Button(window, text='Clear', fg='black', bg='red', font=(\"Arial\", 16), height=2, width=8, command=clear)\n",
+    "clear_button.grid(row=row, column=col, padx=5, pady=5)\n",
+    "equal_button = tk.Button(window, text='=', fg='black', bg='red', font=(\"Arial\", 16), height=2, width=8, command=equalpress)\n",
+    "equal_button.grid(row=row+1, column=col, padx=5, pady=5)\n",
+    "window.mainloop()"
    ]
   }
  ],
