--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,6 +284,46 @@
     "equal_button = tk.Button(window, text='=', fg='black', bg='red', font=(\"Arial\", 16), height=2, width=8, command=equalpress)\n",
     "equal_button.grid(row=row+1, column=col, padx=5, pady=5)\n",
     "window.mainloop()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generator Functions "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def counter():\n",
+    "    i=1\n",
+    "    while(i<=10):\n",
+    "        yield i\n",
+    "        i+=1\n",
+    "for i in counter():\n",
+    "    print(i)"
    ]
   }
  ],
