--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -325,6 +325,46 @@
     "for i in counter():\n",
     "    print(i)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program to decide wheather the number is even or odd using generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 is Odd\n",
+      "2 is Even\n",
+      "3 is Odd\n",
+      "4 is Even\n",
+      "5 is Odd\n",
+      "6 is Even\n",
+      "7 is Odd\n",
+      "8 is Even\n",
+      "9 is Odd\n",
+      "10 is Even\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_odd_even(numbers):\n",
+    "    for num in numbers:\n",
+    "        yield num, \"Even\" if num % 2 == 0 else \"Odd\"\n",
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "result_generator = check_odd_even(numbers)\n",
+    "for num, status in result_generator:\n",
+    "    print(f\"{num} is {status}\")"
+   ]
   }
  ],
  "metadata": {
