--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -365,6 +365,21 @@
     "for num, status in result_generator:\n",
     "    print(f\"{num} is {status}\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program to a sqaures of number from 1 to 10 using generator "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
