--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -376,6 +376,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "def counter():\n",
+    "    i=1\n",
+    "    while(i<=10):\n",
+    "        yield (i**2)\n",
+    "        i+=1\n",
+    "for i in counter():\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program to generate square of even numbers up to 10 using generator and save in list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
