--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -416,10 +416,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 16, 36, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def even_squares(x):\n",
+    "    for i in range(x):\n",
+    "        if i**2%2==0:\n",
+    "            yield i**2\n",
+    "print(list(even_squares(10)))"
+   ]
   }
  ],
  "metadata": {
