--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -434,6 +434,117 @@
     "            yield i**2\n",
     "print(list(even_squares(10)))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program to implement paramatrized constructor , non - paramatrized and default constructor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter 1: Hello\n",
+      "Parameter 2: World\n",
+      "Parameter 1: None\n",
+      "Parameter 2: None\n",
+      "Parameter 1: OpenAI\n",
+      "Parameter 2: GPT-3.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    def __init__(self, param1=None, param2=None):\n",
+    "        self.param1 = param1\n",
+    "        self.param2 = param2\n",
+    "\n",
+    "    def display_params(self):\n",
+    "        print(\"Parameter 1:\", self.param1)\n",
+    "        print(\"Parameter 2:\", self.param2)\n",
+    "\n",
+    "\n",
+    "# Parametrized Constructor\n",
+    "obj1 = MyClass(\"Hello\", \"World\")\n",
+    "obj1.display_params()\n",
+    "\n",
+    "# Non-parametrized Constructor\n",
+    "obj2 = MyClass()\n",
+    "obj2.display_params()\n",
+    "\n",
+    "# Default Constructor\n",
+    "obj3 = MyClass()\n",
+    "obj3.param1 = \"OpenAI\"\n",
+    "obj3.param2 = \"GPT-3.5\"\n",
+    "obj3.display_params()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program to display multilevel inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am an animal. My name is Buddy\n",
+      "I am a mammal. My species is Canis lupus familiaris\n",
+      "I am a dog. My breed is Labrador Retriever\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def display_info(self):\n",
+    "        print(\"I am an animal. My name is\", self.name)\n",
+    "\n",
+    "\n",
+    "class Mammal(Animal):\n",
+    "    def __init__(self, name, species):\n",
+    "        super().__init__(name)\n",
+    "        self.species = species\n",
+    "\n",
+    "    def display_info(self):\n",
+    "        super().display_info()\n",
+    "        print(\"I am a mammal. My species is\", self.species)\n",
+    "\n",
+    "\n",
+    "class Dog(Mammal):\n",
+    "    def __init__(self, name, species, breed):\n",
+    "        super().__init__(name, species)\n",
+    "        self.breed = breed\n",
+    "\n",
+    "    def display_info(self):\n",
+    "        super().display_info()\n",
+    "        print(\"I am a dog. My breed is\", self.breed)\n",
+    "\n",
+    "\n",
+    "# Create an object of the Dog class\n",
+    "my_dog = Dog(\"Buddy\", \"Canis lupus familiaris\", \"Labrador Retriever\")\n",
+    "\n",
+    "# Call the display_info method to display the information\n",
+    "my_dog.display_info()\n"
+   ]
   }
  ],
  "metadata": {
